localization bug fixed login button no spacing

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,17 +1,4 @@
-/* .navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000; 
-  } 
-  */
 
-  /* .nav {
-    background-color: black;
-    color: black;
-    background: black;
-  } */
 
   #loginButton , #logoutButton{
     border: 1.5px solid rgb(204, 204, 204);
